branches/ConvertTo2010Express/src/MoonRoad/System.h


void WINAPI MakeSound(LPCWSTR soundName);

void WINAPI MakeSoundFromFile(LPCWSTR soundName);

void WINAPI MakeSoundFromResource(HMODULE hModule, LPCWSTR soundName);

void WINAPI EmptyRecycleBin();

BOOL WINAPI IsTopMostWindow(HWND handle);

void WINAPI SetTopMostWindow(HWND handle, BOOL value);

void WINAPI SetBottomMostWindow(HWND handle, BOOL value);

void WINAPI WindowInsertAfter(HWND hwnd, HWND hwndInsertAfter);

void WINAPI BroadcastApplicationMessage(UINT Msg);