src/MoonRoad/MoonRoad.h


BOOL WINAPI StartEngine(HWND handle, LPWSTR applicationName);

BOOL WINAPI PostMainMessage(BYTE applicationNumber, UINT Msg, WPARAM wParam, LPARAM lParam);

BOOL WINAPI SendMainMessage(BYTE applicationNumber, UINT Msg, WPARAM wParam, LPARAM lParam);

BOOL WINAPI SameText(LPCWSTR s1, LPCWSTR s2);

void WINAPI SetDockRectangle(LPRECT rect);

void WINAPI ExtractArchive(LPWSTR archiveName, LPWSTR destination);

void WINAPI CreateBackup(LPWSTR archiveName, LPWSTR baseFolder);