src/Laugris.Sage/Internal/MoonRoad.cs


        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetDockRectangle(ref RECT rect);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr GetPrimaryMonitor();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void GetPrimaryMonitorBounds(ref RECT rect);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void GetPrimaryMonitorArea(ref RECT rect);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Auto)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PostMainMessage(byte applicationNumber, WindowMessage msg, IntPtr wparam, IntPtr lparam);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Auto)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool PostMainMessage(byte applicationNumber, int msg, IntPtr wparam, IntPtr lparam);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Auto)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SendMainMessage(byte applicationNumber, WindowMessage msg, IntPtr wparam, IntPtr lparam);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Auto)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SendMainMessage(byte applicationNumber, int msg, IntPtr wparam, IntPtr lparam);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MakeSound(string soundName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MakeSoundFromFile(string soundFileName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void MakeSoundFromResource(IntPtr handle, string soundName);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool RecycleBinEmpty();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void EmptyRecycleBin();

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool IsTopMostWindow(IntPtr handle);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetTopMostWindow(IntPtr handle, bool value);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void SetBottomMostWindow(IntPtr handle, bool value);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void WindowInsertAfter(IntPtr hwnd, IntPtr hwndInsertAfter);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr LoadBitmapPNG([MarshalAs(UnmanagedType.LPWStr)] string fileName, ref int width, ref int height, out IntPtr ppvBits);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr LoadBitmapJPG([MarshalAs(UnmanagedType.LPWStr)] string fileName, ref int width, ref int height, out IntPtr ppvBits);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr LoadPNGResource(IntPtr handle, string szName, ref int width, ref int height, out IntPtr ppvBits);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        [return: MarshalAs(UnmanagedType.Bool)]
        public static extern bool SameText([MarshalAs(UnmanagedType.LPWStr)] string firstSting, [MarshalAs(UnmanagedType.LPWStr)] string secondString);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void CopyNativeBitmap(IntPtr src, IntPtr dstDC, int width, int height, int left, int top);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern IntPtr CreateNativeBitmap(int width, int height, out IntPtr ppvBits);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void CreateBackup(string archiveName, string baseFolder);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void ExtractArchive(string archiveName, string destination);

        [DllImport("MoonRoad.dll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void BroadcastApplicationMessage(int msg);


        public static bool StartEngineEx(IntPtr handle)
        {
            try
            {
                return StartEngine(handle, GlobalConfig.ProductName);
            }
            catch (DllNotFoundException)
            {
                throw new HookException();
            }

        }

    }
}
